# crazyplan

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/tracks/: drone_racing.toml
configs/train/: default.toml  short.toml
crazyplan/: visualization.py
crazyplan/cli/: __init__.py  export.py  plot_track.py  train.py
crazyplan/core/: __init__.py  config.py  policy.py  rollout.py  sim.py  training.py
crazyplan/tracks/: min_snap.py  track.py  track_loader.py
